# opengl-shiny-triangle-cpp

./: .gitignore  CMAKELISTS.txt  README.md
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
mobius/: CMAKELISTS.txt
mobius/src/: main.cpp
